Fixed alignments  on page and resized contents accordingly

--- a/less/index.less
+++ b/less/index.less
@@ -14,4 +14,7 @@
 @tablet: ~"(max-width: 800px)";
 @mobile: ~"(max-width: 500px)";
 
-//.btn(green, 10px);
+.page {
+    width: 1000px;
+    margin: 0 auto;
+}
