--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,7 +2,6 @@
 
 //Buttons: Create a parametric mixin that can create the missing buttons in the design file
 .btn(@color, @font-size){
-    display: block;
     background-color: @color;
     font-size: @font-size;
 }
