--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,20 +1,30 @@
 // Navigation Styles here
 
 header {
-	nav {
-		display: flex;
-		flex-flow: row-reverse;
-        justify-content: flex-end;
-        align-content: center;
+    height: 70px;
+    background-color: blue;
+    nav{
+        width: 500px;
+        border: 2px, solid, red;
 
-		a {
-			text-decoration: none;
-			color: white;
+        padding:20px;
+        margin-left: auto;
+        margin-right: 8rem;
+        font-size: 2rem;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
 
-			&:link {
-				text-decoration: none;
-				color: white;
-			}
-		}
-	}
+        a{
+            color: black;
+            background-color: purple;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            &:link {
+                text-decoration: none;
+            }
+        }
+    }   
 }
